--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -679,6 +679,9 @@ app:
         text:
           part_1: "Ce syllabus n’a aucune valeur contractuelle. Son contenu est susceptible d’évoluer en cours d’année : soyez attentifs aux dernières modifications."
           part_2: La date de dernière mise à jour est affichée en haut de la page droite.
+      syllabus_form:
+        link: "http://google.com"
+        text: Donner votre avis sur le Syllabus
   partial:
     warning_delete_modal: Êtes vous sûr de vouloir supprimer cet élément ?
     no_element: Aucun élément n'a été trouvé
