--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -1103,3 +1103,20 @@ admin:
     reset_filters: Réinitialiser les filtres
     save: Enregistrer
     edit: Modifier
+
+credits:
+  link: Crédits
+  title: Crédits et mentions légales
+  description: Conformément aux dispositions de l'article 6 III-1 de la loi n°2004-575 du 21 juin 2004 pour la confiance dans l'économie numérique, le présent site est la propriété de l'Université Côte d'Azur
+  editor: Éditeur
+  university:
+    name: Université Côte d'Azur
+    address: 28 Avenue Valrose,
+    postal_code: 06100 Nice
+  website_gestion: Gestion du site
+  website_developpers: Direction des systèmes d'informations
+  conception: Conception
+  conception_description: Projet L@UCA, DSI de l'Université Côte d'Azur
+  credits_description: Freepik Flaticon, Pixabay
+  host: Hébergement
+  host_description: Le site est hébergé par la Direction des systèmes d'informations de l'université Côte d'Azur
