light version w/o top menu

--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -803,6 +803,8 @@ app:
     title_section:
       presentation: PRESENTATION
       prerequisites: PREREQUIS
+      objectives: OBJECTIFS
+      activities: CONTENU
 
   general:
     button:
