feat: add list of syllabus link in navbar

--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -250,6 +250,9 @@ yes: Yes
 no: No
 
 app:
+  navbar:
+    administration: Administration
+    syllabus_list: List of syllabus
   locale:
     fr: 'Français'
     en: 'English'
