--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -298,6 +298,7 @@ app:
       publish_syllabus: Publish the syllabus
       publish_success: Congratulations, the syllabus has been published
       see_student: See student's syllabus
+      see_web: See web syllabus
       duplicate_syllabus: I want this syllabus to be copied at the end of the year for the next year
       duplicate_syllabus_additionnal: (be careful, if the course's Apogee code, use the button duplicate for another course)
       duplicate_syllabus_other_course: Duplicate the syllabus for another course
