--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -300,6 +300,7 @@ app:
       publish_syllabus: Publier le syllabus
       publish_success: Bravo le syllabus a été publié
       see_student: Voir le syllabus étudiant
+      see_web: Voir le syllabus web
       duplicate_syllabus: Je souhaite que ce syllabus soit copié à la fin de l'année universitaire sur le cours de l'année prochaine
       duplicate_syllabus_additionnal: (attention, si le code Apogée du cours change, utilisez le bouton dupliquer sur un autre cours)
       duplicate_syllabus_other_course: Dupliquer le syllabus sur un autre cours
