feat: syllabus light view (web) display parent(s) info

--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -659,6 +659,7 @@ app:
         semester: Semestre
         language: Langue
         belong_to: "Ce cours appartient a %title%"
+        belong_to_multi: "Ce cours est proposé dans "
         teacher: Enseignant
         teacher_manager: Responsable
         teachers: Équipe enseignante
