--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -655,6 +655,7 @@ app:
         semester: Semester
         language: Language
         belong_to: "Belong to %title%"
+        belong_to_multi: "Belong to"
         teacher: Teacher
         teacher_manager: Teacher in charge
         teachers: Teaching team
